--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,2 +1,77 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&family=Montserrat:wght@300;400;500;700&display=swap');
 
+/* GLOBAL */
+
+html {
+    font-family: 'Inter', 'Montserrat', sans-serif;
+}
+
+.btn {
+    border: none;
+    cursor: pointer;
+}
+
+/* OVERLAY */
+
+#overlay {
+    transition: all 1.5s;
+}
+
+#overlay.active {
+    filter: blur(10px);
+}
+
+/* HEADER */
+
+header {
+    align-items: flex-start;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    margin-top: 80px;
+    width: 400px;
+}
+
+#title {
+    color: rgba(60, 60, 60, 1);
+    font-size: 3rem;
+    font-weight: 700;
+}
+
+#reset-btn {
+    background-color: rgba(90, 90, 90, 1);
+    border-radius: 3px;
+    color: rgba(240, 240, 240, 1);
+    font-size: 1.25rem;
+    padding: 3px 10px;
+}
+
+/* MAIN CONTENT */
+
+#gameboard {
+    background-color: rgba(90, 90, 90, 1);
+    border-radius: 7px;
+    display: grid;
+    gap: 13px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    height: 400px;
+    margin: 0 auto;
+    margin-top: 40px;
+    padding: 13px;
+    width: 400px;
+}
+
+.board-cell {
+    background-color: rgba(245, 245, 245, 1);
+    border-radius: 3px;
+    color: rgba(60, 60, 60, 1);
+    cursor: pointer;
+    display: flex;
+    font-size: 5rem;
+    font-weight: 500;
+}
+
+.selection {
+    margin: auto;
+}
