--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,15 +39,27 @@ header {
     width: 400px;
 }
 
-#title {
-    color: rgba(60, 60, 60, 1);
-    font-size: 3rem;
-    font-weight: 700;
+#difficulties {
+    color: rgba(90, 90, 90, 1);
+    font-family: 'Inter', 'Montserrat', sans-serif;
+    font-size: 1rem;
+    font-weight: 500;
+    text-align: center;
+    height: 35px;
+    width: 115px;
+    outline: none;
+    border: none;
+    border-bottom: 2px solid rgba(90, 90, 90, 1);
+    cursor: pointer;
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 #reset-btn {
-    font-size: 1.25rem;
-    padding: 5px 10px;
+    font-size: 0.9rem;
+    font-weight: 700;
+    padding: 0 18px;
+    line-height: 35px;
 }
 
 /* MAIN CONTENT */
