--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,7 +39,7 @@ header {
     width: 400px;
 }
 
-#difficulties {
+#difficulty {
     color: rgba(90, 90, 90, 1);
     font-family: 'Inter', 'Montserrat', sans-serif;
     font-size: 1rem;
